dropdown-menu in index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             <button data-menu="button" aria-expanded="false" aria-controls="menu"> Menu</button>
             <ul data-menu="list" id="menu">
                 <li> <a href="#animais">Animais</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li data-dropdown>
+                    <a href="sobre.html">Sobre</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="empresa.html">A Empresa</a></li>
+                      <li><a href="equipe.html">Equipe</a></li>
+                      <li><a href="socios.html">Sócios</a></li>
+                      <li><a href="investidores.html">Investidores</a></li>
+                    </ul>
+                  </li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#contato">Contato</a></li>
                 <li><a href="login.html">Login</a></li>
